fix z-index

--- a/resources/css/framework/icons.styl
+++ b/resources/css/framework/icons.styl
@@ -1,7 +1,7 @@
 @font-face
   font-family: "icons"
-  src: url('../fonts/icons.eot?v=1560883965897')
-  src: url('../fonts/icons.eot?v=1560883965897?#iefix') format('eot'), url('../fonts/icons.woff?v=1560883965897') format('woff'), url('../fonts/icons.ttf?v=1560883965897') format('truetype')
+  src: url('../fonts/icons.eot?v=1561009427632')
+  src: url('../fonts/icons.eot?v=1561009427632?#iefix') format('eot'), url('../fonts/icons.woff?v=1561009427632') format('woff'), url('../fonts/icons.ttf?v=1561009427632') format('truetype')
   font-weight: 400
   font-style: normal
 
